--- a/index.html
+++ b/index.html
@@ -7,136 +7,156 @@
     href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;1000&display=swap"
     rel="stylesheet">
   <link href="styles/styles.css" rel="stylesheet" />
+  <script src="index.js"></script>
 </head>
 
 <body>
-  <div class="title section">
+  <section id="title">
+    <svg viewBox="0 0 100 100" width="100" height="100">
+      <defs>
+        <path id="circle" d="
+            M 50, 50
+            m -37, 0
+            a 37,37 0 1,1 74,0
+            a 37,37 0 1,1 -74,0" />
+      </defs>
+      <text font-size="8">
+        <textPath xlink:href="#circle">
+          2023 DubsTech Datathon. Iris Hamilton, Bella Lee, Sean Lim.
+        </textPath>
+      </text>
+    </svg>
     <div class="container">
-    <h1>All Foods</h1>
-    <p class="subtitle">Market analysis for Australian grocery store chain. A 2023
-      Datathon project by Iris Hamilton, Bella Lee, and Sean Lim.
-    </p>
+      <h1>All Foods</h1>
+      <p class="subtitle">Market analysis for Australian grocery store chain.
+      </p>
     </div>
-  </div>
+  </section>
 
-  <!-- Quantity and profits -->
-  <h2>Quantity and Profits</h2>
+  <section>
+    <!-- Quantity and profits -->
+    <h2>Quantity and Profits</h2>
 
-  <!-- Tableau embed -->
-  <div class='tableauPlaceholder' id='viz1676767900884' style='position: relative'>
-    <noscript><a href='#'><img alt=' '
-          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;PriceAnalysisDashboard&#47;1_rss.png'
-          style='border: none' /></a></noscript><object class='tableauViz'
-      style='display:none;'>
-      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-      <param name='embed_code_version' value='3' />
-      <param name='site_root' value='' />
-      <param name='name' value='Datathon2023Groceries&#47;PriceAnalysisDashboard' />
-      <param name='tabs' value='yes' />
-      <param name='toolbar' value='yes' />
-      <param name='static_image'
-        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;PriceAnalysisDashboard&#47;1.png' />
-      <param name='animate_transition' value='yes' />
-      <param name='display_static_image' value='yes' />
-      <param name='display_spinner' value='yes' />
-      <param name='display_overlay' value='yes' />
-      <param name='display_count' value='yes' />
-      <param name='language' value='en-US' />
-      <param name='filter' value='publish=yes' />
-    </object>
-  </div>
-  <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1676767900884'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-  <!-- end embed -->
+    <!-- Tableau embed -->
+    <div class='tableauPlaceholder' id='viz1676767900884' style='position: relative'>
+      <noscript><a href='#'><img alt=' '
+            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;PriceAnalysisDashboard&#47;1_rss.png'
+            style='border: none' /></a></noscript><object class='tableauViz'
+        style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='Datathon2023Groceries&#47;PriceAnalysisDashboard' />
+        <param name='tabs' value='yes' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;PriceAnalysisDashboard&#47;1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+      </object>
+    </div>
+    <script
+      type='text/javascript'>                    var divElement = document.getElementById('viz1676767900884'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <!-- end embed -->
+  </section>
 
-  <!-- Items to get rid of -->
-  <h2>Items With Negative Profits</h2>
-  <!-- Tableau embed -->
-  <div class='tableauPlaceholder' id='viz1676768348224' style='position: relative'>
-    <noscript><a href='#'><img alt=' '
-          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;NegativeProfits&#47;1_rss.png'
-          style='border: none' /></a></noscript><object class='tableauViz'
-      style='display:none;'>
-      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-      <param name='embed_code_version' value='3' />
-      <param name='site_root' value='' />
-      <param name='name' value='Datathon2023Groceries&#47;NegativeProfits' />
-      <param name='tabs' value='yes' />
-      <param name='toolbar' value='yes' />
-      <param name='static_image'
-        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;NegativeProfits&#47;1.png' />
-      <param name='animate_transition' value='yes' />
-      <param name='display_static_image' value='yes' />
-      <param name='display_spinner' value='yes' />
-      <param name='display_overlay' value='yes' />
-      <param name='display_count' value='yes' />
-      <param name='language' value='en-US' />
-      <param name='filter' value='publish=yes' />
-    </object>
-  </div>
-  <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1676768348224'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-  <!-- end embed -->
+  <section>
+    <!-- Items to get rid of -->
+    <h2>Items With Negative Profits</h2>
+    <!-- Tableau embed -->
+    <div class='tableauPlaceholder' id='viz1676768348224' style='position: relative'>
+      <noscript><a href='#'><img alt=' '
+            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;NegativeProfits&#47;1_rss.png'
+            style='border: none' /></a></noscript><object class='tableauViz'
+        style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='Datathon2023Groceries&#47;NegativeProfits' />
+        <param name='tabs' value='yes' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;NegativeProfits&#47;1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+      </object>
+    </div>
+    <script
+      type='text/javascript'>                    var divElement = document.getElementById('viz1676768348224'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <!-- end embed -->
+  </section>
 
-  <!-- Basket Analysis-->
-  <h2>Basket Analysis</h2>
-  <!-- Tableau embed -->
-  <div class='tableauPlaceholder' id='viz1676768229122' style='position: relative'>
-    <noscript><a href='#'><img alt=' '
-          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;BasketAnalysisDashboard&#47;1_rss.png'
-          style='border: none' /></a></noscript><object class='tableauViz'
-      style='display:none;'>
-      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-      <param name='embed_code_version' value='3' />
-      <param name='site_root' value='' />
-      <param name='name' value='Datathon2023Groceries&#47;BasketAnalysisDashboard' />
-      <param name='tabs' value='yes' />
-      <param name='toolbar' value='yes' />
-      <param name='static_image'
-        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;BasketAnalysisDashboard&#47;1.png' />
-      <param name='animate_transition' value='yes' />
-      <param name='display_static_image' value='yes' />
-      <param name='display_spinner' value='yes' />
-      <param name='display_overlay' value='yes' />
-      <param name='display_count' value='yes' />
-      <param name='language' value='en-US' />
-      <param name='filter' value='publish=yes' />
-    </object>
-  </div>
-  <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1676768229122'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-  <!-- end embed -->
+  <section>
+    <!-- Basket Analysis-->
+    <h2>Basket Analysis</h2>
+    <!-- Tableau embed -->
+    <div class='tableauPlaceholder' id='viz1676768229122' style='position: relative'>
+      <noscript><a href='#'><img alt=' '
+            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;BasketAnalysisDashboard&#47;1_rss.png'
+            style='border: none' /></a></noscript><object class='tableauViz'
+        style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='Datathon2023Groceries&#47;BasketAnalysisDashboard' />
+        <param name='tabs' value='yes' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;BasketAnalysisDashboard&#47;1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+      </object>
+    </div>
+    <script
+      type='text/javascript'>                    var divElement = document.getElementById('viz1676768229122'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <!-- end embed -->
+  </section>
 
-  <!-- Profit by hour of day -->
-  <h2>Profit by Hour of Day</h2>
-  <!-- Tableau embed -->
-  <div class='tableauPlaceholder' id='viz1676768265541' style='position: relative'>
-    <noscript><a href='#'><img alt=' '
-          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;HourofDayDashboard&#47;1_rss.png'
-          style='border: none' /></a></noscript><object class='tableauViz'
-      style='display:none;'>
-      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-      <param name='embed_code_version' value='3' />
-      <param name='site_root' value='' />
-      <param name='name' value='Datathon2023Groceries&#47;HourofDayDashboard' />
-      <param name='tabs' value='yes' />
-      <param name='toolbar' value='yes' />
-      <param name='static_image'
-        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;HourofDayDashboard&#47;1.png' />
-      <param name='animate_transition' value='yes' />
-      <param name='display_static_image' value='yes' />
-      <param name='display_spinner' value='yes' />
-      <param name='display_overlay' value='yes' />
-      <param name='display_count' value='yes' />
-      <param name='language' value='en-US' />
-      <param name='filter' value='publish=yes' />
-    </object>
-  </div>
-  <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1676768265541'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-  <!-- end embed -->
-
-  <!--  -->
+  <section>
+    <!-- Profit by hour of day -->
+    <h2>Profit by Hour of Day</h2>
+    <!-- Tableau embed -->
+    <div class='tableauPlaceholder' id='viz1676768265541' style='position: relative'>
+      <noscript><a href='#'><img alt=' '
+            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;HourofDayDashboard&#47;1_rss.png'
+            style='border: none' /></a></noscript><object class='tableauViz'
+        style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='Datathon2023Groceries&#47;HourofDayDashboard' />
+        <param name='tabs' value='yes' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;HourofDayDashboard&#47;1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+      </object>
+    </div>
+    <script
+      type='text/javascript'>                    var divElement = document.getElementById('viz1676768265541'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <!-- end embed -->
+  </section>
 </body>
 
 </html>
