Add introduction section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@
     </svg>
     <div class="container">
       <h1>All Foods</h1>
-      <p class="subtitle">Market analysis for Australian grocery store chain.
+      <p class="subtitle">Market analysis for Australian grocery store chain aimed at
+        increasing profits.
+      </p>
+    </div>
+  </section>
+
+  <section class="half">
+    <div>
+      <p>
+        All Foods has been a staple for many when it comes to groceries. However, recent
+        changes
+        to operating hours have resulted in a loss of $50,000 in revenue as well as
+        $40,000 in
+        profit. Data analysis was performed, yielding several findings and conclusions on
+        profitable merchandise and consumer tendencies.
       </p>
     </div>
   </section>
@@ -131,28 +145,29 @@
     <!-- Profit by hour of day -->
     <h2>Customers by Hour of Day</h2>
     <!-- Tableau embed -->
-    div class='tableauPlaceholder' id='viz1676779433769' style='position: relative'>
-    <noscript><a href='#'><img alt=' '
-          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;CustomersbyHourofDayDashboard&#47;1_rss.png'
-          style='border: none' /></a></noscript><object class='tableauViz'
-      style='display:none;'>
-      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-      <param name='embed_code_version' value='3' />
-      <param name='site_root' value='' />
-      <param name='name'
-        value='Datathon2023Groceries&#47;CustomersbyHourofDayDashboard' />
-      <param name='tabs' value='yes' />
-      <param name='toolbar' value='yes' />
-      <param name='static_image'
-        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;CustomersbyHourofDayDashboard&#47;1.png' />
-      <param name='animate_transition' value='yes' />
-      <param name='display_static_image' value='yes' />
-      <param name='display_spinner' value='yes' />
-      <param name='display_overlay' value='yes' />
-      <param name='display_count' value='yes' />
-      <param name='language' value='en-US' />
-      <param name='filter' value='publish=yes' />
-    </object></div>
+    <div class='tableauPlaceholder' id='viz1676779433769' style='position: relative'>
+      <noscript><a href='#'><img alt=' '
+            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;CustomersbyHourofDayDashboard&#47;1_rss.png'
+            style='border: none' /></a></noscript><object class='tableauViz'
+        style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name'
+          value='Datathon2023Groceries&#47;CustomersbyHourofDayDashboard' />
+        <param name='tabs' value='yes' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;CustomersbyHourofDayDashboard&#47;1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+      </object>
+    </div>
     <script
       type='text/javascript'>                    var divElement = document.getElementById('viz1676779433769'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1150px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <!-- end embed -->
