--- a/index.html
+++ b/index.html
@@ -52,30 +52,26 @@
     <h2>Quantity and Profits</h2>
 
     <!-- Tableau embed -->
-    <div class='tableauPlaceholder' id='viz1676767900884' style='position: relative'>
-      <noscript><a href='#'><img alt=' '
-            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;PriceAnalysisDashboard&#47;1_rss.png'
-            style='border: none' /></a></noscript><object class='tableauViz'
-        style='display:none;'>
-        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-        <param name='embed_code_version' value='3' />
-        <param name='site_root' value='' />
-        <param name='name' value='Datathon2023Groceries&#47;PriceAnalysisDashboard' />
-        <param name='tabs' value='yes' />
-        <param name='toolbar' value='yes' />
-        <param name='static_image'
-          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;PriceAnalysisDashboard&#47;1.png' />
-        <param name='animate_transition' value='yes' />
-        <param name='display_static_image' value='yes' />
-        <param name='display_spinner' value='yes' />
-        <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' />
-        <param name='language' value='en-US' />
-        <param name='filter' value='publish=yes' />
-      </object>
-    </div>
+    div class='tableauPlaceholder' id='viz1676783885887' style='position: relative'>
+    <noscript><a href='#'><img alt=' '
+          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;BP&#47;BPBYNGKCM&#47;1_rss.png'
+          style='border: none' /></a></noscript><object class='tableauViz'
+      style='display:none;'>
+      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+      <param name='embed_code_version' value='3' />
+      <param name='path' value='shared&#47;BPBYNGKCM' />
+      <param name='toolbar' value='yes' />
+      <param name='static_image'
+        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;BP&#47;BPBYNGKCM&#47;1.png' />
+      <param name='animate_transition' value='yes' />
+      <param name='display_static_image' value='yes' />
+      <param name='display_spinner' value='yes' />
+      <param name='display_overlay' value='yes' />
+      <param name='display_count' value='yes' />
+      <param name='language' value='en-US' />
+    </object></div>
     <script
-      type='text/javascript'>                    var divElement = document.getElementById('viz1676767900884'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+      type='text/javascript'>                    var divElement = document.getElementById('viz1676783885887'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1150px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <!-- end embed -->
   </section>
 
@@ -114,36 +110,33 @@
     <!-- Basket Analysis-->
     <h2>Basket Analysis</h2>
     <!-- Tableau embed -->
-    <div class='tableauPlaceholder' id='viz1676768229122' style='position: relative'>
+    <div class='tableauPlaceholder' id='viz1676783909842' style='position: relative'>
       <noscript><a href='#'><img alt=' '
-            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;BasketAnalysisDashboard&#47;1_rss.png'
+            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;5X&#47;5XNSDX488&#47;1_rss.png'
             style='border: none' /></a></noscript><object class='tableauViz'
         style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
-        <param name='site_root' value='' />
-        <param name='name' value='Datathon2023Groceries&#47;BasketAnalysisDashboard' />
-        <param name='tabs' value='yes' />
+        <param name='path' value='shared&#47;5XNSDX488' />
         <param name='toolbar' value='yes' />
         <param name='static_image'
-          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023Groceries&#47;BasketAnalysisDashboard&#47;1.png' />
+          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;5X&#47;5XNSDX488&#47;1.png' />
         <param name='animate_transition' value='yes' />
         <param name='display_static_image' value='yes' />
         <param name='display_spinner' value='yes' />
         <param name='display_overlay' value='yes' />
         <param name='display_count' value='yes' />
         <param name='language' value='en-US' />
-        <param name='filter' value='publish=yes' />
       </object>
     </div>
     <script
-      type='text/javascript'>                    var divElement = document.getElementById('viz1676768229122'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.minHeight = '1150px'; vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+      type='text/javascript'>                    var divElement = document.getElementById('viz1676783909842'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1150px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <!-- end embed -->
   </section>
 
   <section>
     <!-- Profit by hour of day -->
-    <h2>Customers by Hour of Day</h2>
+    <h2>Customer Behavior</h2>
     <!-- Tableau embed -->
     <div class='tableauPlaceholder' id='viz1676779433769' style='position: relative'>
       <noscript><a href='#'><img alt=' '
