Minor grammar fixes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       products
       that can be acquired or produced at low costs, and either 1. decrease their stock or
       2.
-      increase the price of these items during seasons where they cost extra to acquire
+      increase the price of these items during seasons when they cost extra to acquire
       and are
       not in demand. Increasing the price of items is a viable option when the demand does
       not
@@ -228,7 +228,7 @@
     <h2>Conclusion and Proposed Changes</h2>
     <p>
       Based on the observations outlined above, the store can increase its profits without
-      changing its operating times by removing unprofitable items sold at low quantities
+      changing its operating times by removing unprofitable items sold in low quantities
       and
       increasing the price of items in high demand. Using this dashboard, the client can
       choose
@@ -239,8 +239,8 @@
 
     <p>
       For example, we determined that to recover the profit lost from changing operating
-      hours
-      the store just needs too:
+      hours,
+      the store can simply:
     <ul>
       <li>Remove items with a negative profit that sold less than 150 count</li>
       <li>Uniformly markup the price of items with at least 1000 items sold by 20%</li>
