Edit headers and add information

--- a/index.html
+++ b/index.html
@@ -225,12 +225,13 @@
   </section>
 
   <section>
-    <h2>Conclusion and Proposed Changes</h2>
+    <h2>Proposed Sales Changes</h2>
     <p>
       Based on the observations outlined above, the store can increase its profits without
       changing its operating times by removing unprofitable items sold in low quantities
       and
-      increasing the price of items in high demand. Using this dashboard, the client can
+      increasing the price of items in high demand. Using the dashboard below, the client
+      can
       choose
       thresholds for quantity sold. The client should increase items that are unprofitable
       but
@@ -246,6 +247,12 @@
       <li>Uniformly markup the price of items with at least 1000 items sold by 20%</li>
     </ul>
     </p>
+
+    <p>
+      This would lead to a 13% increase in profit. Though we acknowledge that it is
+      unrealistic to uniformly increase the prices of items by 20%, this suggestion serves
+      as a reference point for the price adjustment of individual items.
+    </p><br />
     <div class='tableauPlaceholder' id='viz1676842938786' style='position: relative'>
       <noscript><a href='#'><img alt=' '
             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Datathon2023PriceMarginDashboard&#47;PriceMarginDashboard&#47;1_rss.png'
