Change wording to be more client focused

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         changes
         to operating hours have resulted in a loss of $50,000 in revenue as well as
         $40,000 in
-        profit. Data analysis was performed, yielding several findings and conclusions on
-        profitable merchandise and consumer tendencies.
+        profit. Our team has created multiple data visualization dashboards for our client
+        to understand their products and market at a glance.
       </p>
     </div>
   </section>
@@ -67,7 +67,8 @@
       and are
       not in demand. Increasing the price of items is a viable option when the demand does
       not
-      decrease significantly in periods of negative profit.</p><br />
+      decrease significantly in periods of negative profit.</p>
+    <br />
 
     <!-- Tableau embed -->
     <div class='tableauPlaceholder' id='viz1676783885887' style='position: relative'>
@@ -107,9 +108,10 @@
     </p>
 
     <p>
-      To determine these items, we created a visualization for the average unit price
+      To determine these items, the client can use the visualization visualization for the
+      average unit price
       margin and
-      the sum of the quality sold, then filtered by negative unit price margin.
+      the sum of the quality sold, and filter by negative unit price margin.
     </p><br />
     <!-- Tableau embed -->
     <div class='tableauPlaceholder' id='viz1676843297071' style='position: relative'>
@@ -146,7 +148,8 @@
       of
       impulse purchases a customer makes. Through this data visualization, by filtering
       for type
-      of product, items that are often bought with it can be determined. Placing items
+      of product, the client can determine items that are often bought with it. Placing
+      items
       that are
       often bought together in the same section of the store will increase sales, as
       customers
