Slight formatting changes

--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
       when the
       cost of acquiring avocados went up. To prevent loss, the store should maximize
       products
-      that can be acquired or produced at low costs, and either 1. decrease their stock or
-      2.
-      increase the price of these items during seasons when they cost extra to acquire
+      that can be acquired or produced at low costs, and either <em>1. decrease their
+        stock or
+        2.
+        increase the price of these items</em> during seasons when they cost extra to
+      acquire
       and are
-      not in demand. Increasing the price of items is a viable option when the demand does
+      not in demand. Increasing the price of items is a viable option when the
+      demand does
       not
       decrease significantly in periods of negative profit.</p>
     <br />
@@ -98,7 +101,8 @@
   <section>
     <h2>Unprofitable Items</h2>
     <p>
-      Items with a negative average unit price margin that do not sell well should be
+      Items with a <em>negative average unit price margin</em> that do not sell well
+      should be
       removed
       from the store. However, the store can increase the price of items with high
       quantities
@@ -189,7 +193,8 @@
       they
       previously hadn’t considered. This makes certain products more appealing, thus
       increasing
-      revenues. In 2017 and 2018, peak customer counts were at the 11th hour of the day.
+      revenues. In 2017 and 2018, peak customer counts were at the <em>11th hour of the
+        day</em>.
       Following this model, it can be predicted that there will be similar trends in
       traffic.
       Discounts should be applied at these peak hours to maximize additional sales. The
@@ -252,7 +257,8 @@
     </p>
 
     <p>
-      This would lead to a 13% increase in profit. Though we acknowledge that it is
+      This would lead to a <em>13% increase in profit</em>. Though we acknowledge that it
+      is
       unrealistic to uniformly increase the prices of items by 20%, this suggestion serves
       as a reference point for the price adjustment of individual items.
     </p><br />
@@ -283,7 +289,7 @@
   </section>
 
   <section>
-    <h2>View Tableau Files</h2>
+    <h2>Tableau Source Files</h2>
     <ul>
       <li><a
           href="https://public.tableau.com/views/Datathon2023Groceries/UnprofitableItemsDashboard?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link"
@@ -293,6 +299,9 @@
           target="_blank" rel="noreferrer">Price margin calculator</a></li>
     </ul>
   </section>
+  <footer>
+    &copy; Iris Hamilton, Bella Lee, Sean Lim 2023
+  </footer>
 </body>
 
 </html>
