--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet">
   <link href="styles/styles.css" rel="stylesheet" />
   <script src="index.js"></script>
+  <title>DubsTech Datathon 2023</title>
 </head>
 
 <body>
